[package]
name = "swt"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"
lto = true
debug = true
opt-level = 0

[build-dependencies]
cbindgen = "0.24.3"
bindgen = "0.63.0"